--- a/horizontal-scroll/react-ts/src/index.css
+++ b/horizontal-scroll/react-ts/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* for macOS scroll */
+  overscroll-behavior-y: none;
 }
 
 code {
